# remove-if-present

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  pyproject.toml
src/remove_if_present/: __init__.py  remove_if_present.py
