[tool.poetry]
name = "remove-if-present"
version = "0.0.0"
description = "Remove files if they exist."
authors = ["Eirik Haatveit <haatveit@uio.no>"]
readme = "README.md"
packages = [{include = "remove_if_present", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[tool.poetry.scripts]
remove-if-present = "remove_if_present.remove_if_present:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=0.20.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true
